# ask-sg-agencies

./: README.md  app.py  pyproject.toml  test_llm.py
agent/: __init__.py  category_agent.py  supervisor.py  synthesizer.py
config/: agency_mapping.py  config.py  llm_errors.py  win_ssl_fix.py  windows_patch.py
prompt/: __init__.py  arts_culture.py  economy.py  education.py  environment.py  geospatial.py  health.py  housing.py  realtime_apis.py  registry.py  social.py  supervisor.py  synthesizer.py  transport.py
src/: __init__.py  agent_runner.py  graph.py  state.py
tools/: __init__.py  dataset.py
